Fix z-index for navbar

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
     justify-content: center;
     padding: 1em 0;
     background-color: rgba(0,0,0,0.75);
+    z-index: 99;
 }
 
 .sticky {
